task4: Fix swagger errors
