# docs/swagger.json
@@ -27,7 +27,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Create Board"
+                    "Board"
                 ],
                 "summary": "Create Board",
                 "parameters": [
@@ -38,6 +38,92 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/handlers.CreateBoardRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/boards/{boardID}/tasks/{id}": {
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "deleted a task",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Task"
+                ],
+                "summary": "Delete Task",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Task ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/boards/{boardID}/tasks/{taskID}": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "updates a task",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Task"
+                ],
+                "summary": "Update Task",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Task ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Update Task",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.TaskRequest"
                         }
                     }
                 ],
@@ -66,7 +152,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Get Board"
+                    "Board"
                 ],
                 "summary": "Get Board",
                 "parameters": [
@@ -82,7 +168,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domain.Board"
+                            "$ref": "#/definitions/domains.Board"
                         }
                     },
                     "400": {
@@ -110,7 +196,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Update Board"
+                    "Board"
                 ],
                 "summary": "Update Board",
                 "parameters": [
@@ -154,7 +240,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Delete Board"
+                    "Board"
                 ],
                 "summary": "Delete Board",
                 "parameters": [
@@ -179,6 +265,77 @@
                 }
             }
         },
+        "/columns/{boardId}": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "create a column",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Column"
+                ],
+                "summary": "Create Column",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/columns/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "gets a column",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Column"
+                ],
+                "summary": "Get Column",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Column ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domains.Column"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "description": "login user with email and password",
@@ -189,7 +346,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Login"
+                    "Authentication"
                 ],
                 "summary": "User login",
                 "parameters": [
@@ -226,7 +383,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "SignUp"
+                    "Authentication"
                 ],
                 "summary": "User registration",
                 "parameters": [
@@ -252,10 +409,52 @@
                     }
                 }
             }
+        },
+        "/tasks": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "creates a task",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Task"
+                ],
+                "summary": "Create Task",
+                "parameters": [
+                    {
+                        "description": "Create Task",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.TaskRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "domain.Board": {
+        "domains.Board": {
             "type": "object",
             "properties": {
                 "createdBy": {
@@ -269,6 +468,29 @@
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "domains.Column": {
+            "type": "object",
+            "properties": {
+                "boardID": {
+                    "type": "integer"
+                },
+                "createdBy": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "isFinal": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "orderPosition": {
+                    "type": "integer"
                 }
             }
         },
@@ -332,6 +554,9 @@
                     "example": "1234Test@"
                 }
             }
+        },
+        "handlers.TaskRequest": {
+            "type": "object"
         },
         "handlers.UpdateBoardRequest": {
             "type": "object",
